changing some content

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav>
         <div class="nav-container">
             <div class="logo" data-aos="zoom-in" data-aos-duration="1000">
-                <span>Amelia</span>
+                <span>Portfolio</span>
             </div>
             <div class="links">
                 <div class="link" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100"><a href="#">Home</a></div>
@@ -39,12 +39,14 @@
         <section>
             <div class="main-container">
                 <div class="image" data-aos="zoom-in-right" data-aos-duration="2500">
-                    <img src="main.png" alt="">
+                    <img src="main.jpg" alt="">
                 </div>
                 <div class="content">
-                    <h1 data-aos="fade-left" data-aos-duration="1000" data-aos-delay="800">Hey I'm <span>Amelia</span></h1>
+                    <h1 data-aos="fade-left" data-aos-duration="1000" data-aos-delay="800">Hey I'm <span>Yenuli</span></h1>
                     <div class="typewriter" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="900">I'm a <span></span></div>
-                    <p data-aos="flip-up" data-aos-duration="1000" data-aos-delay="1000">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione, perferendis quas consectetur possimus maxime consequatur cupiditate eos dolorum molestias praesentium error exercitationem rem labore illo, in dolor, odio corporis excepturi?</p>
+                    <p data-aos="flip-up" data-aos-duration="1000" data-aos-delay="1000">I'm a passionate Computer Science undergraduate who 
+                        loves turning ideas into real-world solutions through code. With experience in both frontend and backend technologies,
+                        I enjoy building responsive websites, mobile apps, and smart systems that make a difference.</p>
                     <div class="social-links" data-aos="flip-down" data-aos-duration="1000" data-aos-delay="1200">
                         <a href="#" ><i class="fa-brands fa-github"></i></a>
                         <a href="#"><i class="fa-brands fa-facebook"></i></a>
