add social media links

--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
                         loves turning ideas into real-world solutions through code. With experience in both frontend and backend technologies,
                         I enjoy building responsive websites, mobile apps, and smart systems that make a difference.</p>
                     <div class="social-links" data-aos="flip-down" data-aos-duration="1000" data-aos-delay="1200">
-                        <a href="#" ><i class="fa-brands fa-github"></i></a>
-                        <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                        <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-                        <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+                        <a href="https://github.com/yenuliobapitiya" ><i class="fa-brands fa-github"></i></a>
+                        <a href="https://www.facebook.com/profile.php?id=100090322934741"><i class="fa-brands fa-facebook"></i></a>
+                        <a href="www.linkedin.com/in/yenuli-tharuka-obapitiya-93b6b92b9"><i class="fa-brands fa-linkedin"></i></a>
+                        <a href="https://x.com/yobapitiya?s=21"><i class="fa-brands fa-x-twitter"></i></a>
                     </div>
                     <div class="btn" data-aos="zoom-out-left" data-aos-duration="1000" data-aos-delay="1300">
                         <button>Download CV</button>
