--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
             data-aos-duration="1000"
             data-aos-delay="500"
           >
-            <a href="#">Blogs</a>
+            <!-- <a href="#">Blogs</a>
           </div>
           <div
             class="link contact-btn"
             data-aos="fade-up"
             data-aos-duration="1000"
             data-aos-delay="600"
-          >
+          > -->
             <a href="#">Contact Us</a>
           </div>
         </div>
