create a image wrapper

--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@
     <section>
       <div class="main-container">
         <div class="image" data-aos="zoom-in-right" data-aos-duration="2500">
-          <img src="main.jpg" alt="" />
+          <div class="image-wrapper">
+            <img src="main.jpg" alt="profile image" />
+          </div>
         </div>
         <div class="content">
           <h1
