remove blog section

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <a href="">About</a>
           <a href="">Skills</a>
           <a href="">Services</a>
-          <a href="">Blogs</a>
+          <!-- <a href="">Blogs</a> -->
           <a href="">Contact Us</a>
           <i class="fa-solid fa-xmark cancel" onclick="cancel()"></i>
         </div>
