--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@
       </div>
       <div class="dropdown">
         <div class="links">
-          <a href="">Home</a>
-          <a href="">About</a>
-          <a href="">Skills</a>
-          <a href="">Services</a>
+          <a href="index.html">Home</a>
+          <a href="about.html">About</a>
+          <a href="skills.html">Skills</a>
+          <a href="services.html">Services</a>
           <!-- <a href="">Blogs</a> -->
-          <a href="">Contact Us</a>
+          <a href="contact.html">Contact Us</a>
           <i class="fa-solid fa-xmark cancel" onclick="cancel()"></i>
         </div>
       </div>
