--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <title>Yenu Portfolio</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <style>
+      html {
+        scroll-behavior: smooth;
+      }
+    </style>
   </head>
   <body>
     <nav>
@@ -24,7 +29,7 @@
             data-aos-duration="1000"
             data-aos-delay="100"
           >
-            <a href="#">Home</a>
+            <a href="#home">Home</a>
           </div>
           <div
             class="link"
@@ -32,7 +37,7 @@
             data-aos-duration="1000"
             data-aos-delay="200"
           >
-            <a href="#">About</a>
+            <a href="#about">About</a>
           </div>
           <div
             class="link"
@@ -40,7 +45,7 @@
             data-aos-duration="1000"
             data-aos-delay="300"
           >
-            <a href="#">Skills</a>
+            <a href="#skills">Skills</a>
           </div>
           <div
             class="link"
@@ -48,7 +53,7 @@
             data-aos-duration="1000"
             data-aos-delay="400"
           >
-            <a href="#">Services</a>
+            <a href="#projects">Projects</a>
           </div>
           <div
             class="link"
@@ -56,28 +61,28 @@
             data-aos-duration="1000"
             data-aos-delay="500"
           >
-            <a href="#">Contact Us</a>
+            <a href="#contact">Contact Us</a>
           </div>
         </div>
         <i class="fa-solid fa-bars hamburg" onclick="hamburg()"></i>
       </div>
       <div class="dropdown">
         <div class="links">
-          <a href="index.html">Home</a>
-          <a href="about.html">About</a>
-          <a href="skills.html">Skills</a>
-          <a href="services.html">Services</a>
-          <!-- <a href="">Blogs</a> -->
-          <a href="contact.html">Contact Us</a>
+          <a href="#home">Home</a>
+          <a href="#about">About</a>
+          <a href="#skills">Skills</a>
+          <a href="#projects">Projects</a>
+          <a href="#contact">Contact Us</a>
           <i class="fa-solid fa-xmark cancel" onclick="cancel()"></i>
         </div>
       </div>
     </nav>
-    <section>
+
+    <section id="home">
       <div class="main-container">
         <div class="image" data-aos="zoom-in-right" data-aos-duration="2500">
           <div class="image-wrapper">
-            <img src="main.jpg" alt="profile image" />
+            <img src="about.jpg" alt="profile image" />
           </div>
         </div>
         <div class="content">
@@ -114,7 +119,8 @@
             <a href="https://www.facebook.com/profile.php?id=100090322934741"
               ><i class="fa-brands fa-facebook"></i
             ></a>
-            <a href="www.linkedin.com/in/yenuli-tharuka-obapitiya-93b6b92b9"
+            <a
+              href="https://www.linkedin.com/in/yenuli-tharuka-obapitiya-93b6b92b9"
               ><i class="fa-brands fa-linkedin"></i
             ></a>
             <a href="https://x.com/yobapitiya?s=21"
@@ -132,19 +138,171 @@
         </div>
       </div>
     </section>
+
+    <section id="about">
+      <div class="about-container">
+        <div class="about-image" data-aos="fade-right" data-aos-duration="1000">
+          <div class="about-image-wrapper">
+            <img src="main.jpg" alt="About Image" />
+          </div>
+        </div>
+        <div
+          class="about-content"
+          data-aos="fade-left"
+          data-aos-duration="1000"
+        >
+          <h2>About Me</h2>
+          <p>
+            I'm a dedicated and enthusiastic Computer Science undergraduate with
+            a passion for creating elegant, efficient, and user-friendly digital
+            solutions. I love exploring new technologies, solving problems, and
+            building projects that make a positive impact.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <section id="skills">
+      <div class="skills-content">
+        <h2>My Skills</h2>
+        <p>Here are some of the technologies and tools I use regularly:</p>
+
+        <div class="skills-grid">
+          <div class="skill-card">
+            <i class="fab fa-python"></i>
+            <h3>Python</h3>
+          </div>
+          <div class="skill-card">
+            <i class="fab fa-java"></i>
+            <h3>Java</h3>
+          </div>
+          <div class="skill-card">
+            <i class="fab fa-html5"></i>
+            <h3>HTML5</h3>
+          </div>
+          <div class="skill-card">
+            <i class="fab fa-css3-alt"></i>
+            <h3>CSS3</h3>
+          </div>
+          <div class="skill-card">
+            <i class="fab fa-js-square"></i>
+            <h3>JavaScript</h3>
+          </div>
+          <div class="skill-card">
+            <i class="fab fa-react"></i>
+            <h3>React</h3>
+          </div>
+          <div class="skill-card">
+            <i class="fab fa-node"></i>
+            <h3>Node.js</h3>
+          </div>
+          <div class="skill-card">
+            <i class="fas fa-database"></i>
+            <h3>MongoDB</h3>
+          </div>
+          <div class="skill-card">
+            <i class="fab fa-figma"></i>
+            <h3>Figma</h3>
+          </div>
+          <div class="skill-card">
+            <i class="fab fa-git-alt"></i>
+            <h3>Git</h3>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="projects">
+      <div class="projects-container">
+        <h2>My Projects</h2>
+        <p>Here are some of the projects I've worked on recently:</p>
+
+        <div class="projects-grid">
+          <div class="project-card">
+            <img src="images/project1.jpg" alt="Project 1" />
+            <div class="project-info">
+              <h3>MindBridge App</h3>
+              <p>A mental health mobile app built with Flutter and Firebase.</p>
+            </div>
+          </div>
+
+          <div class="project-card">
+            <img src="images/project2.jpg" alt="Project 2" />
+            <div class="project-info">
+              <h3>Netflix Clone</h3>
+              <p>
+                A responsive portfolio built using HTML, CSS, and JavaScript.
+              </p>
+            </div>
+          </div>
+
+          <div class="project-card">
+            <img src="images/project3.jpg" alt="Project 3" />
+            <div class="project-info">
+              <h3>Chatbot API</h3>
+              <p>Node.js backend integrating LangChain and OpenAI GPT API.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="contact">
+      <div class="contact-container">
+        <h2>Contact Me</h2>
+        <p>
+          I'd love to hear from you! Whether you have a question or just want to
+          say hi, feel free to reach out.
+        </p>
+
+        <form id="contactForm" class="contact-form">
+          <div class="input-group">
+            <input type="text" placeholder="Your Name" required />
+            <input type="email" placeholder="Your Email" required />
+          </div>
+          <textarea rows="5" placeholder="Your Message" required></textarea>
+          <button type="submit">Send Message</button>
+        </form>
+
+        <div id="messageSent" class="message-sent">
+          <p>✅ Your message was sent successfully!</p>
+        </div>
+      </div>
+    </section>
+
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
       AOS.init({ offset: 0 });
-    </script>
-    <script>
+
       function hamburg() {
         const navbar = document.querySelector(".dropdown");
         navbar.style.transform = "translateY(0px)";
       }
+
       function cancel() {
         const navbar = document.querySelector(".dropdown");
         navbar.style.transform = "translateY(-500px)";
       }
+
+      document.addEventListener("DOMContentLoaded", function () {
+        const form = document.getElementById("contactForm");
+        const messageSent = document.getElementById("messageSent");
+
+        if (form && messageSent) {
+          form.addEventListener("submit", function (e) {
+            e.preventDefault();
+
+            // Show message
+            messageSent.classList.add("show");
+            form.reset();
+
+            // Hide message after 4 seconds
+            setTimeout(() => {
+              messageSent.classList.remove("show");
+            }, 4000);
+          });
+        }
+      });
     </script>
   </body>
 </html>
