update the cv button

--- a/index.html
+++ b/index.html
@@ -133,7 +133,9 @@
             data-aos-duration="1000"
             data-aos-delay="1300"
           >
-            <button>Download CV</button>
+            <a href="yenuli_cv.pdf" download class="cv-btn">
+              <button>Download CV</button>
+            </a>
           </div>
         </div>
       </div>
@@ -235,7 +237,6 @@
               </p>
             </div>
           </div>
-
         </div>
       </div>
     </section>
