--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 
         <div class="projects-grid">
           <div class="project-card">
-            <img src="images/project1.jpg" alt="Project 1" />
+            <img src="project1.jpg" alt="Project 1" />
             <div class="project-info">
               <h3>MindBridge App</h3>
               <p>A mental health mobile app built with Flutter and Firebase.</p>
@@ -229,7 +229,7 @@
           </div>
 
           <div class="project-card">
-            <img src="images/project2.jpg" alt="Project 2" />
+            <img src="project2.png" alt="Project 2" />
             <div class="project-info">
               <h3>Netflix Clone</h3>
               <p>
