--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       <div class="main-container">
         <div class="image" data-aos="zoom-in-right" data-aos-duration="2500">
           <div class="image-wrapper">
-            <img src="about.jpg" alt="profile image" />
+            <img src="images/about.jpg" alt="profile image" />
           </div>
         </div>
         <div class="content">
@@ -145,7 +145,7 @@
       <div class="about-container">
         <div class="about-image" data-aos="fade-right" data-aos-duration="1000">
           <div class="about-image-wrapper">
-            <img src="main.jpg" alt="About Image" />
+            <img src="images/main.jpg" alt="About Image" />
           </div>
         </div>
         <div
@@ -221,7 +221,7 @@
 
         <div class="projects-grid">
           <div class="project-card">
-            <img src="project1.jpg" alt="Project 1" />
+            <img src="images/project1.jpg" alt="Project 1" />
             <div class="project-info">
               <h3>MindBridge App</h3>
               <p>A mental health mobile app built with Flutter and Firebase.</p>
@@ -229,7 +229,7 @@
           </div>
 
           <div class="project-card">
-            <img src="project2.png" alt="Project 2" />
+            <img src="images/project2.png" alt="Project 2" />
             <div class="project-info">
               <h3>Netflix Clone</h3>
               <p>
