fixed the issues in project section

--- a/index.html
+++ b/index.html
@@ -220,23 +220,29 @@
         <p>Here are some of the projects I've worked on recently:</p>
 
         <div class="projects-grid">
-          <div class="project-card">
+          <a
+            href="https://github.com/Ranumi123/MindBridge"
+            target="_blank"
+            class="project-card"
+          >
             <img src="images/project1.jpg" alt="Project 1" />
             <div class="project-info">
               <h3>MindBridge App</h3>
               <p>A mental health mobile app built with Flutter and Firebase.</p>
             </div>
-          </div>
+          </a>
 
-          <div class="project-card">
+          <a
+            href="https://github.com/yenuliobapitiya/netflix-clone"
+            target="_blank"
+            class="project-card"
+          >
             <img src="images/project2.png" alt="Project 2" />
             <div class="project-info">
               <h3>Netflix Clone</h3>
-              <p>
-                A responsive portfolio built using HTML, CSS, and JavaScript.
-              </p>
+              <p>A responsive clone built using HTML, CSS, and JavaScript.</p>
             </div>
-          </div>
+          </a>
         </div>
       </div>
     </section>
