added new project

--- a/index.html
+++ b/index.html
@@ -243,6 +243,20 @@
               <p>A responsive clone built using HTML, CSS, and JavaScript.</p>
             </div> 
           </a>
+
+          <a
+            href="https://github.com/yenuliobapitiya/Event-Ticketing-System-"
+            target="_blank"
+            class="project-card"
+          >
+            <img src="images/project3.png" alt="Project 1" />
+            <div class="project-info">
+              <h3>Event Ticketing System</h3>
+              <p>A mental health mobile app built with Flutter and Firebase.</p>
+            </div>
+          </a>
+
+
         </div>
       </div>
     </section>
