added new project

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
             <img src="images/project3.png" alt="Project 1" />
             <div class="project-info">
               <h3>Event Ticketing System</h3>
-              <p>A mental health mobile app built with Flutter and Firebase.</p>
+              <p>A Real-Time Event Ticketing System using Java, based on the Producer-Consumer pattern and OOP principles. </p>
             </div>
           </a>
 
