added new project

--- a/index.html
+++ b/index.html
@@ -256,6 +256,19 @@
             </div>
           </a>
 
+          <a
+            href="https://github.com/yenuliobapitiya/weather-app"
+            target="_blank"
+            class="project-card"
+          >
+            <img src="images/project4.png" alt="Project 1" />
+            <div class="project-info">
+              <h3>Weather App</h3>
+              <p>A simple and responsive Weather App built using HTML, CSS, and JavaScript. 
+                It fetches real-time weather data from a public API and displays current conditions
+                 like temperature, humidity, wind speed, and more based on user input.</p>
+            </div>
+          </a>
 
         </div>
       </div>
