added new project

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
             target="_blank"
             class="project-card"
           >
-            <img src="images/project4.png" alt="Project 1" />
+            <img src="images/project4.jpeg" alt="Project 1" />
             <div class="project-info">
               <h3>Weather App</h3>
               <p>A simple and responsive Weather App built using HTML, CSS, and JavaScript. 
