added new project

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
             target="_blank"
             class="project-card"
           >
-            <img src="images/project3.png" alt="Project 1" />
+            <img src="images/project3.png" alt="Project 3" />
             <div class="project-info">
               <h3>Event Ticketing System</h3>
               <p>A Real-Time Event Ticketing System using Java, based on the Producer-Consumer pattern and OOP principles. </p>
@@ -261,9 +261,23 @@
             target="_blank"
             class="project-card"
           >
-            <img src="images/project4.jpeg" alt="Project 1" />
+            <img src="images/project4.jpeg" alt="Project 4" />
             <div class="project-info">
               <h3>Weather App</h3>
+              <p>A simple and responsive Weather App built using HTML, CSS, and JavaScript. 
+                It fetches real-time weather data from a public API and displays current conditions
+                 like temperature, humidity, wind speed, and more based on user input.</p>
+            </div>
+          </a>
+
+          <a
+            href="https://github.com/yenuliobapitiya/HotelManagementSystem"
+            target="_blank"
+            class="project-card"
+          >
+            <img src="images/project5.jpg" alt="Project 5" />
+            <div class="project-info">
+              <h3>Hotel Management System</h3>
               <p>A simple and responsive Weather App built using HTML, CSS, and JavaScript. 
                 It fetches real-time weather data from a public API and displays current conditions
                  like temperature, humidity, wind speed, and more based on user input.</p>
