added new project

--- a/index.html
+++ b/index.html
@@ -278,9 +278,10 @@
             <img src="images/project5.jpg" alt="Project 5" />
             <div class="project-info">
               <h3>Hotel Management System</h3>
-              <p>A simple and responsive Weather App built using HTML, CSS, and JavaScript. 
-                It fetches real-time weather data from a public API and displays current conditions
-                 like temperature, humidity, wind speed, and more based on user input.</p>
+              <p>A desktop application built using Java and Swing to manage hotel operations such as staff roles,
+                 guest information, and room details. The system follows object-oriented programming principles and
+                  features a graphical user interface for easy interaction.
+                </p>
             </div>
           </a>
 
