add new project

--- a/index.html
+++ b/index.html
@@ -284,6 +284,21 @@
                 </p>
             </div>
           </a>
+          
+          <a
+            href="https://yenuliobapitiya.github.io/QR-Code-Generator/"
+            target="_blank"
+            class="project-card"
+          >
+            <img src="images/project5.jpg" alt="Project 6" />
+            <div class="project-info">
+              <h3>QR Code Generator</h3>
+              <p>A simple and modern QR Code Generator built with HTML, CSS, and JavaScript.
+                Generate customizable QR codes with options for color, size, and easy download
+                all in a clean, responsive interface. Powered by the lightweight qrcodejs library.
+                </p>
+            </div>
+          </a>
 
         </div>
       </div>
