--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
             target="_blank"
             class="project-card"
           >
-            <img src="images/project5.jpg" alt="Project 6" />
+            <img src="images/projects6.png" alt="Project 6" />
             <div class="project-info">
               <h3>QR Code Generator</h3>
               <p>A simple and modern QR Code Generator built with HTML, CSS, and JavaScript.
