--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
             data-aos-duration="1000"
             data-aos-delay="200"
           >
-            <a href="#about">About</a>
+            <!-- <a href="#about">About</a>
           </div>
           <div
             class="link"
             data-aos="fade-up"
             data-aos-duration="1000"
             data-aos-delay="300"
-          >
+          > -->
             <a href="#skills">Skills</a>
           </div>
           <div
@@ -69,7 +69,7 @@
       <div class="dropdown">
         <div class="links">
           <a href="#home">Home</a>
-          <a href="#about">About</a>
+          <!-- <a href="#about">About</a> -->
           <a href="#skills">Skills</a>
           <a href="#projects">Projects</a>
           <a href="#contact">Contact Us</a>
@@ -141,7 +141,7 @@
       </div>
     </section>
 
-    <section id="about">
+    <!-- <section id="about">
       <div class="about-container">
         <div class="about-image" data-aos="fade-right" data-aos-duration="1000">
           <div class="about-image-wrapper">
@@ -162,7 +162,7 @@
           </p>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <section id="skills">
       <div class="skills-content">
