--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             data-aos-duration="1000"
             data-aos-delay="500"
           >
-            <a href="#contact">Contact Us</a>
+            <a href="#contact">Contact Me</a>
           </div>
         </div>
         <i class="fa-solid fa-bars hamburg" onclick="hamburg()"></i>
