--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css"
     />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css">
     <title>Yenu Portfolio</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
@@ -210,8 +211,8 @@
             <h3>Node.js</h3>
           </div>
           <div class="skill-card">
-            <i class="fas fa-database"></i>
-            <h3>MongoDB</h3>
+            <i class="devicon-mysql-plain colored"></i>
+            <h3>MySQL</h3>
           </div>
           <div class="skill-card">
             <i class="fab fa-figma"></i>
