--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             data-aos-duration="1000"
             data-aos-delay="1300"
           >
-            <a href="yenuli_cv.pdf" download class="cv-btn">
+            <a href="Yenuli_Obapitiya_CV.pdf" download class="cv-btn">
               <button>Download CV</button>
             </a>
           </div>
